--- a/WebApplication14/appsettings.json
+++ b/WebApplication14/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+
+    "ConnectionStrings": {
+        "dbConnection": "Data Source=SHAHARYAR\\MSSQLSERVER02;Initial Catalog=DBName;Integrated Security=true;TrustServerCertificate=true;"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
